5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1649_2446.log
== TEST (2019-04-14 14:46:54) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10

if( (n2+n4+n6) + (n1+n3+n5) =!0 ) :
	print("acesso liberado")
if((n2+n4+n6) + (n1+n3+n5) = 0) :
	print("senha invalida")

-- ERROR:
File "XXXX", line 9
    if( (n2+n4+n6) + (n1+n3+n5) =!0 ) :
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 14:46:55) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10

if( (n2+n4+n6) + (n1+n3+n5) =!0 ) :
	print("acesso liberado")
if((n2+n4+n6) + (n1+n3+n5) = 0) :
	print("senha invalida")

-- ERROR:
File "XXXX", line 9
    if( (n2+n4+n6) + (n1+n3+n5) =!0 ) :
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 14:46:55) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10

if( (n2+n4+n6) + (n1+n3+n5) =!0 ) :
	print("acesso liberado")
if((n2+n4+n6) % (n1+n3+n5) = 0) :
	print("senha invalida")

-- ERROR:
File "XXXX", line 9
    if( (n2+n4+n6) + (n1+n3+n5) =!0 ) :
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 14:46:56) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10

if( (n2+n4+n6) + (n1+n3+n5) =!0 ) :
	print("acesso liberado")
if((n2+n4+n6) % (n1+n3+n5) = 0) :
	print("senha invalida")

-- ERROR:
File "XXXX", line 9
    if( (n2+n4+n6) + (n1+n3+n5) =!0 ) :
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 14:47:22) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10

if( (n2+n4+n6) % (n1+n3+n5) = !0 ) :
	print("acesso liberado")
if( (n2+n4+n6) % (n1+n3+n5) = 0  ) :
	print("senha invalida")

-- ERROR:
File "XXXX", line 9
    if( (n2+n4+n6) % (n1+n3+n5) = !0 ) :
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 14:47:41) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10
if( (n2+n4+n6) % (n1+n3+n5) =!0 ) :
	print("acesso liberado")
if( (n2+n4+n6) % (n1+n3+n5) = 0  ) :
	print("senha invalida")

-- ERROR:
File "XXXX", line 8
    if( (n2+n4+n6) % (n1+n3+n5) =!0 ) :
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 14:47:57) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10
if( (n2+n4+n6) % (n1+n3+n5) != 0 ) :
	print("acesso liberado")
if( (n2+n4+n6) % (n1+n3+n5) = 0  ) :
	print("senha invalida")

-- ERROR:
File "XXXX", line 10
    if( (n2+n4+n6) % (n1+n3+n5) = 0  ) :
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 14:47:58) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10
if( (n2+n4+n6) % (n1+n3+n5) != 0 ) :
	print("acesso liberado")
if( (n2+n4+n6) % (n1+n3+n5) = 0  ) :
	print("senha invalida")

-- ERROR:
File "XXXX", line 10
    if( (n2+n4+n6) % (n1+n3+n5) = 0  ) :
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 14:48:08) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10
if( (n2+n4+n6) % (n1+n3+n5) != 0 ) :
	print("acesso liberado")
if( (n2+n4+n6) % (n1+n3+n5) = 0  ) :
	print("senha invalida")

-- ERROR:
File "XXXX", line 10
    if( (n2+n4+n6) % (n1+n3+n5) = 0  ) :
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 14:48:18) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10
if( (n2+n4+n6) % (n1+n3+n5) != 0 ) :
	print("acesso liberado")
if( (n2+n4+n6) % (n1+n3+n5) == 0  ) :
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 14:48:21) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10
if( (n2+n4+n6) % (n1+n3+n5) != 0 ) :
	print("acesso liberado")
if( (n2+n4+n6) % (n1+n3+n5) == 0  ) :
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 14:52:15) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10
if( (n2+n4+n6) % (n1+n3+n5) != 0 ) :
	print("acesso liberado")
if( (n2+n4+n6) % (n1+n3+n5) == 0  ) :
	print("senha invalida")

-- EXECUTION TIME:
0.22171
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:47:33) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10
if( (n2+n4+n6) % (n1+n3+n5) != 0 ) :
	print("acesso liberado")
if( (n2+n4+n6) % (n1+n3+n5) == 0  ) :
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:51:56) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10
if( (n2+n4+n6) % (n1+n3+n5) != 0 ) :
	print("acesso liberado")
if( (n2+n4+n6) % (n1+n3+n5) == 0  ) :
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:52:10) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10
if( (n2+n4+n6) % (n1+n3+n5) != 0 ) :
	print("acesso liberado")
if( (n2+n4+n6) % (n1+n3+n5) == 0  ) :
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:52:22) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10
if( (n2+n4+n6) % (n1+n3+n5) != 0 ) :
	print("acesso liberado")
if( (n2+n4+n6) % (n1+n3+n5) == 0  ) :
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:52:25) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10
if( (n2+n4+n6) % (n1+n3+n5) != 0 ) :
	print("acesso liberado")
if( (n2+n4+n6) % (n1+n3+n5) == 0  ) :
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:53:44) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10
if( (n2+n4+n6) % (n1+n3+n5) != 0 ) :
	print("acesso liberado")
else :
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:53:44) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10
if( (n2+n4+n6) % (n1+n3+n5) != 0 ) :
	print("acesso liberado")
else :
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:53:44) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10
if( (n2+n4+n6) % (n1+n3+n5) != 0 ) :
	print("acesso liberado")
else :
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:53:44) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10
if( (n2+n4+n6) % (n1+n3+n5) != 0 ) :
	print("acesso liberado")
else :
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:53:45) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10
if( (n2+n4+n6) % (n1+n3+n5) != 0 ) :
	print("acesso liberado")
else :
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 15:54:00) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10
if( (n2+n4+n6) % (n1+n3+n5) != 0 ) :
	print("acesso liberado")
else :
	print("senha invalida")

-- EXECUTION TIME:
0.298243
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:16:11) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10
if( (n2+n4) % (n1+n3) % (n5+n6) != 0 ) :
	print("acesso liberado")
e
	print("senha invalida")

-- ERROR:
File "XXXX", line 11
    print("senha invalida")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:16:45) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10
if( (n2+n4) % (n1+n3) % (n5+n6) != 0 ) :
	print("acesso liberado")
else :
	print("senha invalida")

-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 17:17:20) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10
if( (n2+n4) % (n1+n3) % (n5+n6) != 0 ) :
	print("acesso liberado")
else :
	print("senha invalida")

-- EXECUTION TIME:
0.140582
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:23:16) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10
if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	print("acesso liberado")
else :
	print("senha invalida")

-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 17:23:25) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%1000
n4=(n//100)%100
n5=(n//10)%10
n6=n%10
if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	print("acesso liberado")
else :
	print("senha invalida")

-- EXECUTION TIME:
0.120418
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:31:55) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%100
n4=(n//100)%10
n5=(n//10)%1
n6=n%10
if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	print("acesso liberado")
else :
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 17:32:02) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%100
n4=(n//100)%10
n5=(n//10)%1
n6=n%10
if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	print("acesso liberado")
else :
	print("senha invalida")

-- EXECUTION TIME:
0.132876
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:33:29) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%100
n4=(n//100)%10
n5=(n//10)%1
n6=n%10
if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	print("acesso liberado")
if( (n1+n3) % (n2+n4) % (n5+n6) = 0 ) :
	print("senha invalida")

-- ERROR:
File "XXXX", line 10
    if( (n1+n3) % (n2+n4) % (n5+n6) = 0 ) :
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:33:49) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%100
n4=(n//100)%10
n5=(n//10)%1
n6=n%10
if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	print("acesso liberado")
if( (n1+n3) % (n2+n4) % (n5+n6) == 0 ) :
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 17:33:57) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%100
n4=(n//100)%10
n5=(n//10)%1
n6=n%10
if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	print("acesso liberado")
if( (n1+n3) % (n2+n4) % (n5+n6) == 0 ) :
	print("senha invalida")

-- EXECUTION TIME:
0.124668
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:34:05) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%100
n4=(n//100)%10
n5=(n//10)%1
n6=n%10
if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	print("acesso liberado")
if( (n1+n3) % (n2+n4) % (n5+n6) == 0 ) :
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 17:34:18) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
n2=(n//10000)%1000
n3=(n//1000)%100
n4=(n//100)%10
n5=(n//10)%1
n6=n%10
if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	print("acesso liberado")
if( (n1+n3) % (n2+n4) % (n5+n6) == 0 ) :
	print("senha invalida")

-- EXECUTION TIME:
0.109827
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:40:26) 
-- CODE:
n=int(input("entrada"))
r=n%100000
n1=n//100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10
if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	print("acesso liberado")
if( (n1+n3) % (n2+n4) % (n5+n6) == 0 ) :
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 17:40:31) 
-- CODE:
n=int(input("entrada"))
r=n%100000
n1=n//100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10
if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	print("acesso liberado")
if( (n1+n3) % (n2+n4) % (n5+n6) == 0 ) :
	print("senha invalida")

-- EXECUTION TIME:
0.148013
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:40:48) 
-- CODE:
n=int(input("entrada"))
r=n%100000
n1=n//100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10
if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	print("acesso liberado")
else :
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 17:40:53) 
-- CODE:
n=int(input("entrada"))
r=n%100000
n1=n//100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10
if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	print("acesso liberado")
else :
	print("senha invalida")

-- EXECUTION TIME:
0.154458
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:41:06) 
-- CODE:
n=int(input("entrada"))
r=n%100000
n1=n//100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10
if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	print("acesso liberado")
else :
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 17:41:16) 
-- CODE:
n=int(input("entrada"))
r=n%100000
n1=n//100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10
if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	print("acesso liberado")
else :
	print("senha invalida")

-- EXECUTION TIME:
0.170473
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:42:03) 
-- CODE:
n=int(input("entrada"))
r=n%100000
n1=n//100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10
if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	print("acesso liberado")
else :
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 17:42:09) 
-- CODE:
n=int(input("entrada"))
r=n%100000
n1=n//100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10
if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	print("acesso liberado")
else :
	print("senha invalida")

-- EXECUTION TIME:
0.200514
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:42:59) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
r=n%100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10
if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	print("acesso liberado")
else :
	print("senha invalida")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 17:43:05) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
r=n%100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10
if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	print("acesso liberado")
else :
	print("senha invalida")

-- EXECUTION TIME:
0.110515
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:45:13) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
r=n%100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10
if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	p="acesso liberado"
else :
	p="senha invalida"
print(p)	

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 17:45:18) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
r=n%100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10
if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	p="acesso liberado"
else :
	p="senha invalida"
print(p)	

-- EXECUTION TIME:
0.168047
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:46:04) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
r=n%100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10
if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	p="acesso liberado"
if( (n1+n3) % (n2+n4) % (n5+n6) == 0 ) :
	p="senha invalida"
print(p)	

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 17:46:09) 
-- CODE:
n=int(input("entrada"))
n1=n//100000
r=n%100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10
if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	p="acesso liberado"
if( (n1+n3) % (n2+n4) % (n5+n6) == 0 ) :
	p="senha invalida"
print(p)	

-- EXECUTION TIME:
0.192797
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:47:52) 
-- CODE:
nu=int(input("entrada"))

n1=nu//100000
r=nu%100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10

if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	p="acesso liberado"
if( (n1+n3) % (n2+n4) % (n5+n6) == 0 ) :
	p="senha invalida"
print(p)	

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 17:48:04) 
-- CODE:
nu=int(input("entrada"))

n1=nu//100000
r=nu%100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10

if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	p="acesso liberado"
if( (n1+n3) % (n2+n4) % (n5+n6) == 0 ) :
	p="senha invalida"
print(p)	

-- EXECUTION TIME:
0.128
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:48:20) 
-- CODE:
nu=int(input("entrada"))

n1=nu//100000
r=nu%100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10

if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	p="acesso liberado"
else :
	p="senha invalida"
print(p)	

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 17:48:31) 
-- CODE:
nu=int(input("entrada"))

n1=nu//100000
r=nu%100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10

if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	p="acesso liberado"
else :
	p="senha invalida"
print(p)	

-- EXECUTION TIME:
0.136974
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:48:37) 
-- CODE:
nu=int(input("entrada"))

n1=nu//100000
r=nu%100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10

if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	p="acesso liberado"
else :
	p="senha invalida"
print(p)	

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 17:48:44) 
-- CODE:
nu=int(input("entrada"))

n1=nu//100000
r=nu%100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10

if( (n1+n3) % (n2+n4) % (n5+n6) != 0 ) :
	p="acesso liberado"
else :
	p="senha invalida"
print(p)	

-- EXECUTION TIME:
0.277026
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:49:27) 
-- CODE:
nu=int(input("entrada"))

n1=nu//100000
r=nu%100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10

if( (n2+n4+n6) % (n1+n3+n5) != 0 ) :
	p="acesso liberado"
else :
	p="senha invalida"
print(p)	

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:50:34) 
-- CODE:
nu=int(input("entrada"))

n1=nu//100000
r=nu%100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10

if( (n1+n3)%(n2+n4)%(n5+n6) != 0 ) :
	p="acesso liberado"
else :
	p="senha invalida"
print(p)	

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 17:50:39) 
-- CODE:
nu=int(input("entrada"))

n1=nu//100000
r=nu%100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10

if( (n1+n3)%(n2+n4)%(n5+n6) != 0 ) :
	p="acesso liberado"
else :
	p="senha invalida"
print(p)	

-- EXECUTION TIME:
0.129389
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:50:58) 
-- CODE:
nu=int(input("entrada"))

n1=nu//100000
r=nu%100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10

if( (n1+n3)%(n2+n4)%(n5+n6) != 0 ) :
	p="acesso liberado"
else :
	p="senha invalida"
print(p)	

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 17:51:07) 
-- CODE:
nu=int(input("entrada"))

n1=nu//100000
r=nu%100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10

if( (n1+n3)%(n2+n4)%(n5+n6) != 0 ) :
	p="acesso liberado"
else :
	p="senha invalida"
print(p)	

-- EXECUTION TIME:
0.161675
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 17:51:33) 
-- CODE:
nu=int(input("entrada"))

n1=nu//100000
r=nu%100000
n2=r//10000
n3=(r%10000)//1000
n4=(r%100)//100
n5=(r%100)//10
n6=r%10

if( (n1+n3)%(n2+n4)%(n5+n6) != 0 ) :
	p="acesso liberado"
else :
	p="senha invalida"
print(p)	

-- EXECUTION TIME:
0.140254
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:58:18) 
-- CODE:
nu=int(input("numero"))
n1=nu//100000
r=nu%100000
n2=r//10000
r=r%10000
n3=r//1000
r=r%1000
n4=r//100
r=r%100
n5=r//10
n6=r%10
if ( (n1+n3)%(n2+n4)%(n5+n6) != 0 ) :
	print("acesso liberado")
else :
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 17:58:26) 
-- CODE:
nu=int(input("numero"))
n1=nu//100000
r=nu%100000
n2=r//10000
r=r%10000
n3=r//1000
r=r%1000
n4=r//100
r=r%100
n5=r//10
n6=r%10
if ( (n1+n3)%(n2+n4)%(n5+n6) != 0 ) :
	print("acesso liberado")
else :
	print("senha invalida")
-- EXECUTION TIME:
0.132961
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 18:00:18) 
-- CODE:
nu=int(input("numero"))
n1=nu//100000
r=nu%100000
n2=r//10000
r=r%10000
n3=r//1000
r=r%1000
n4=r//100
r=r%100
n5=r//10
n6=r%10
if ( (n1+n3+n5)%(n2+n4+n6) != 0 ) :
	print("acesso liberado")
else :
	print("senha invalida")
-- EXECUTION TIME:
0.14022
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:00:19) 
-- CODE:
nu=int(input("numero"))
n1=nu//100000
r=nu%100000
n2=r//10000
r=r%10000
n3=r//1000
r=r%1000
n4=r//100
r=r%100
n5=r//10
n6=r%10
if ( (n1+n3+n5)%(n2+n4+n6) != 0 ) :
	print("acesso liberado")
else :
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 18:00:24) 
-- CODE:
nu=int(input("numero"))
n1=nu//100000
r=nu%100000
n2=r//10000
r=r%10000
n3=r//1000
r=r%1000
n4=r//100
r=r%100
n5=r//10
n6=r%10
if ( (n1+n3+n5)%(n2+n4+n6) != 0 ) :
	print("acesso liberado")
else :
	print("senha invalida")
-- EXECUTION TIME:
0.123902
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 18:00:35) 
-- CODE:
nu=int(input("numero"))
n1=nu//100000
r=nu%100000
n2=r//10000
r=r%10000
n3=r//1000
r=r%1000
n4=r//100
r=r%100
n5=r//10
n6=r%10
if ( (n1+n3)%(n2+n4)%(n5+n6) != 0 )  :
	print("acesso liberado")
else :
	print("senha invalida")
-- EXECUTION TIME:
0.258433
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 07:27:39) 
-- CODE:
nu=int(input("numero"))
n1=nu//100000
r=nu%100000
n2=r//10000
r=r%10000
n3=r//1000
r=r%1000
n4=r//100
r=r%100
n5=r//10
r=n5%10
n6=r
if ( (n1+n3)%(n2+n4)%(n5+n6) != 0 )  :
	print("acesso liberado")
else :
	print("senha invalida")
-- EXECUTION TIME:
0.173506
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 07:27:40) 
-- CODE:
nu=int(input("numero"))
n1=nu//100000
r=nu%100000
n2=r//10000
r=r%10000
n3=r//1000
r=r%1000
n4=r//100
r=r%100
n5=r//10
r=n5%10
n6=r
if ( (n1+n3)%(n2+n4)%(n5+n6) != 0 )  :
	print("acesso liberado")
else :
	print("senha invalida")
-- EXECUTION TIME:
0.184946
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 07:27:54) 
-- CODE:
nu=int(input("numero"))
n1=nu//100000
r=nu%100000
n2=r//10000
r=r%10000
n3=r//1000
r=r%1000
n4=r//100
r=r%100
n5=r//10
r=n5%10
n6=r//1
if ( (n1+n3)%(n2+n4)%(n5+n6) != 0 )  :
	print("acesso liberado")
else :
	print("senha invalida")
-- EXECUTION TIME:
0.166573
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 07:27:55) 
-- CODE:
nu=int(input("numero"))
n1=nu//100000
r=nu%100000
n2=r//10000
r=r%10000
n3=r//1000
r=r%1000
n4=r//100
r=r%100
n5=r//10
r=n5%10
n6=r//1
if ( (n1+n3)%(n2+n4)%(n5+n6) != 0 )  :
	print("acesso liberado")
else :
	print("senha invalida")
-- EXECUTION TIME:
0.158849
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 07:27:55) 
-- CODE:
nu=int(input("numero"))
n1=nu//100000
r=nu%100000
n2=r//10000
r=r%10000
n3=r//1000
r=r%1000
n4=r//100
r=r%100
n5=r//10
r=n5%10
n6=r//1
if ( (n1+n3)%(n2+n4)%(n5+n6) != 0 )  :
	print("acesso liberado")
else :
	print("senha invalida")
-- EXECUTION TIME:
0.295031
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
numeroacesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 07:27:55) 
-- CODE:
nu=int(input("numero"))
n1=nu//100000
r=nu%100000
n2=r//10000
r=r%10000
n3=r//1000
r=r%1000
n4=r//100
r=r%100
n5=r//10
r=n5%10
n6=r//1
if ( (n1+n3)%(n2+n4)%(n5+n6) != 0 )  :
	print("acesso liberado")
else :
	print("senha invalida")
-- EXECUTION TIME:
0.182602
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
numeroacesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 07:27:55) 
-- CODE:
nu=int(input("numero"))
n1=nu//100000
r=nu%100000
n2=r//10000
r=r%10000
n3=r//1000
r=r%1000
n4=r//100
r=r%100
n5=r//10
r=n5%10
n6=r//1
if ( (n1+n3)%(n2+n4)%(n5+n6) != 0 )  :
	print("acesso liberado")
else :
	print("senha invalida")
-- EXECUTION TIME:
0.24899
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
numeroacesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 07:27:55) 
-- CODE:
nu=int(input("numero"))
n1=nu//100000
r=nu%100000
n2=r//10000
r=r%10000
n3=r//1000
r=r%1000
n4=r//100
r=r%100
n5=r//10
r=n5%10
n6=r//1
if ( (n1+n3)%(n2+n4)%(n5+n6) != 0 )  :
	print("acesso liberado")
else :
	print("senha invalida")
-- EXECUTION TIME:
0.352426
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
numeroacesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
numeroacesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 07:28:26) 
-- CODE:
nu=int(input("numero"))
n1=nu//100000
r=nu%100000
n2=r//10000
r=r%10000
n3=r//1000
r=r%1000
n4=r//100
r=r%100
n5=r//10
n6=nu%10
if ( (n1+n3)%(n2+n4)%(n5+n6) != 0 )  :
	print("acesso liberado")
else :
	print("senha invalida")
-- EXECUTION TIME:
0.104747
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
